# Tax_Incentive_Compliance_Platform

./: .coverage  .dockerignore  .editorconfig  .env  .env.docker.example  .env.example  .env.txt  .gitattributes  .gitignore  .gitignore.backup  .npmrc  API_KEY_VERIFICATION.md  AURA ENHANCED SCREENPLAY PARSER.txt  BRANCH_PROTECTION.md  BRAND_GUIDELINES.md  BUILD_IN_PROGRESS.md  Built for Every Role in Production..md  CLONE_TO_VSCODE.md  CODECOV_SETUP.md  COMPLETION_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONTAINER_REVIEW.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_SUCCESS.md  DEVELOPER_PORTAL.md  DOCKER_REVIEW_INDEX.md  DOCKER_SETUP.md  Dockerfile  FAQ.md  FIXES_ACTION_PLAN.md  FRONTEND_IMPLEMENTATION.md  GITHUB_SETUP.md  GIT_WORKFLOW.md  Hey Brian,.txt  IMPLEMENTATION_SUMMARY.md  LARGO_INTEGRATION.md  LICENSE  MILESTONE_1_COMPLETE.md  (+120 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
Tax_Incentive_Compliance_Platform/: FRONTEND_IMPLEMENTATION.md
archive_20260218_125420/: legacy_main.py.py  main.py.backup  routes.py.backup  start.ps1.backup
backend/: init_db.py  requirements.txt  standalone.py  startup.py
backup_20260110_140811/: Tax_incentive_compliance_dailystartup.txt  requirements.db.txt  requirements.extras.txt  schema.prisma.txt
backup_20260111_074042/: .env.example  BRAND_GUIDELINES.md  PROJECT_PROGRESS.md  USER_MANUAL.md  package.json  pytest.ini  requirements-dev.txt  requirements.core.txt  requirements.extras.txt  version_manager.py
dashboard-app/: Demo seed · PY  package-lock.json  (+1 more)
(+548 files in other folders)
