[project]
name = "pilotforge-tax-incentive-platform"
version = "0.1.0"
description = "Tax Incentive Intelligence for Film & TV Productions"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.11"
authors = [
    {name = "PilotForge", email = "info@pilotforge.com"}
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "-p", "no:pylint"
]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests for combined components",
    "e2e: End-to-end tests for complete workflows",
    "database: Tests requiring database access",
    "api: API endpoint tests",
    "auth: Authentication and authorization tests",
    "compliance: Compliance logic tests",
    "slow: Tests that take longer to run",
    "jurisdiction: Jurisdiction-specific tests",
    "anyio: Tests using anyio"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool. coverage.report]
precision = 2
show_missing = true
skip_covered = false